--- a/Yuzu/YuzuTest/YuzuTest.csproj
+++ b/Yuzu/YuzuTest/YuzuTest.csproj
@@ -81,6 +81,7 @@
     <Compile Include="TestJson.cs" />
     <Compile Include="TestMeta.cs" />
     <Compile Include="TestProtobuf.cs" />
+    <Compile Include="TestReferences.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Yuzu.Win.csproj">
