--- a/Yuzu.Win.csproj
+++ b/Yuzu.Win.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Yuzu\Grisu\PowersOfTenCache.cs" />
     <Compile Include="Yuzu\JsonHelpers.cs" />
     <Compile Include="Yuzu\ReaderDeserializer.cs" />
+    <Compile Include="Yuzu\ReferenceResolver.cs" />
     <Compile Include="Yuzu\Surrogates.cs" />
     <Compile Include="Yuzu\UnsafeReader.cs" />
     <Compile Include="Yuzu\JsonDeserializer.cs" />
