--- a/Yuzu/YuzuTest/YuzuTest.csproj
+++ b/Yuzu/YuzuTest/YuzuTest.csproj
@@ -77,8 +77,10 @@
     <Compile Include="TestClone.cs" />
     <Compile Include="TestInterop.cs" />
     <Compile Include="TestJson.cs" />
+    <Compile Include="TestJsonFlattenedHierarchy.cs" />
     <Compile Include="TestMeta.cs" />
     <Compile Include="TestProtobuf.cs" />
+    <Compile Include="TestReadIntoDictionary.cs" />
     <Compile Include="TestReferences.cs" />
   </ItemGroup>
   <ItemGroup>
