Bestow Citrus coding style upon Yuzu.
style bois

--- a/Yuzu.csproj
+++ b/Yuzu.csproj
@@ -25,6 +25,8 @@
     <Compile Remove="Yuzu\Grisu\LICENSE" />
   </ItemGroup>
 
+  <Import Project="Analyzers.targets" />
+
   <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" />
 
 </Project>
