--- a/Yuzu.csproj
+++ b/Yuzu.csproj
@@ -1,30 +1,16 @@
-﻿<Project>
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <MSBuildProjectExtensionsPath>obj/msbuild_project_extensions</MSBuildProjectExtensionsPath>
-  </PropertyGroup>
-
-  <Import Project="Sdk.props" Sdk="Microsoft.NET.Sdk" />
-
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>Yuzu</RootNamespace>
-    <AssemblyName>Yuzu</AssemblyName>
-    <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <LangVersion>8.0</LangVersion>
+    <AssemblyName>Yuzu</AssemblyName>
+    <RootNamespace>Yuzu</RootNamespace>
+    <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="*" />
-    <None Remove="*/**" />
-    <Compile Include="Yuzu\**" />
-    <Compile Remove="Yuzu\docs\**" />
-    <Compile Remove="Yuzu\Properties\**" />
+    <None Remove=".git" />
+    <None Remove="Yuzu\YuzuTest\**" />
     <Compile Remove="Yuzu\YuzuTest\**" />
-    <Compile Remove="Yuzu\Grisu\LICENSE" />
   </ItemGroup>
-
-  <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" />
 
 </Project>
