[CIT-2537][NET7] Remove platform specific projects.
TODO: REMOVE: temporarily add interpreter and iOS define

--- a/Yuzu.csproj
+++ b/Yuzu.csproj
@@ -1,18 +1,13 @@
-﻿<Project>
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <MSBuildProjectExtensionsPath>obj/msbuild_project_extensions</MSBuildProjectExtensionsPath>
-  </PropertyGroup>
-
-  <Import Project="Sdk.props" Sdk="Microsoft.NET.Sdk" />
-
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>Yuzu</RootNamespace>
     <AssemblyName>Yuzu</AssemblyName>
     <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <LangVersion>8.0</LangVersion>
+    <DefineConstants>$(DefineConstants);iOS</DefineConstants>
+    <UseInterpreter>true</UseInterpreter>
   </PropertyGroup>
 
   <ItemGroup>
@@ -24,7 +19,5 @@
     <Compile Remove="Yuzu\YuzuTest\**" />
     <Compile Remove="Yuzu\Grisu\LICENSE" />
   </ItemGroup>
-
-  <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" />
 
 </Project>
